# AoC_2022

./: README.md  pyproject.toml
Day_01/: 01_Calorie_Counting_1.py  01_Calorie_Counting_2.py
Day_02/: 02_Rock_Paper_Scissors_1.py  02_Rock_Paper_Scissors_2.py
Day_03/: 03_Rucksack Reorganization_1.py  03_Rucksack Reorganization_2.py
Day_04/: 04_Camp Cleanup_1.py  04_Camp_Cleanup_2.py
Day_05/: 05_Supply_Stacks_1.py  05_Supply_Stacks_2.py
Day_06/: 06_Tuning_Trouble_1.py  06_Tuning_Trouble_2.py  06_Tuning_Trouble_x_oneliner.py
Day_07/: 07_No_Space_1.py  07_No_Space_2.py
Day_08/: 08_Treetop_1.py  08_Treetop_2.py
Day_09/: 09_Rope_Bridge_1.py  09_Rope_Bridge_2.py
Day_10/: 10_Cathode-Ray_Tube_1.py  10_Cathode-Ray_Tube_2.py
Day_11/: 11_Monkey_1.py  11_Monkey_2.py
Day_12/: 12_Hill_Climbing_1.py  12_Hill_Climbing_2.py
Day_13/: 13_Distress_Signal_1.py  13_Distress_Signal_2.py
Day_14/: 14_Regolith_1.py  14_Regolith_2.py
Day_15/: 15_Beacon_1.py
